Fix sponsor distortion in Safari

--- a/sass/components/_sponsors.scss
+++ b/sass/components/_sponsors.scss
@@ -36,6 +36,10 @@
         }
     }
 
+    &__logo {
+        object-fit: contain;
+    }
+
     $tiers: (
         ('tier': 'platinum', 'color': $color-white, 'height': 100px),
         ('tier': 'silver', 'color': #bbb, 'height': 80px),
